# Yadro_test_task

./: CMakeLists.txt  Computer_club.cpp  Computer_club.h  Event.h  Message.h  Parser.cpp  Parser.h  README.md  Reader.cpp  Reader.h  Table.h  Time.h  main.cpp
src/: .gitignore  CMakeLists.txt  main.cpp  main_executable
src/ReaderLib/: .gitignore  CMakeLists.txt  Computer_club.cpp  Computer_club.h  Event.h  Message.h  Parser.cpp  Reader.cpp  Reader.h  Table.h  Time.h
tests/: CMakeLists.txt  tests.cpp
